# htmx-rust-something1

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
migrations/: 20230901180557_user.sql  20230902162009_companies.sql  20230902162050_jobs.sql  20230902162110_applicants.sql  20230902162114_applications.sql  20230903054808_notnulls.sql
src/: copilot_generated.rs  lib.rs  main.rs  templates.rs
src/controllers/: applicant.rs  application.rs  company.rs  hello.rs  home.rs  job.rs  mod.rs
src/models/: applicant.rs  application.rs  company.rs  job.rs  mod.rs  user.rs
templates/: applicant.html  application.html  base.html  company.html  company_create.html  hello.html  home.html  job.html
templates/partials/: list_jobs.html
