[package]
name = "htmx-rust-something1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "json"] }
tokio = { version = "1.31.0", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tower-http = { version = "0.4.3", features = ["fs", "compression-br"] }
tower = "0.4.13"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "uuid", "postgres"] }
askama = { version = "0.12.0", features = ["with-axum", "serde-json"] }
askama_axum = "0.3.0"